# http-webserver

./: Cargo.toml  Dockerfile  README.md  config.yml  redirects.yml  rustfmt.toml
echo-server/: Cargo.toml  Dockerfile
echo-server/src/: main.rs
http-server/requests/src/: headers.rs  lib.rs  method.rs  request.rs
http-server/src/: config.rs  main.rs  webserver.rs
http-server/src/webserver/: socket_handler.rs
requests/: Cargo.toml
requests/src/: headers.rs  lib.rs  method.rs  request.rs  status_code.rs
requests/src/headers/: connection.rs
requests/src/request/: get.rs  head.rs  options.rs  trace.rs
responses/: Cargo.toml
responses/src/: lib.rs  response.rs  status_code.rs
server/: Cargo.toml
server/src/: main.rs
server/src/webserver/: socket_handler.rs
shared/: Cargo.toml
shared/src/: headers.rs  method.rs
src/: config.rs  main.rs  settings.rs  webserver.rs
src/webserver/: clf.rs  socket_handler.rs
src/webserver/requests/: mod.rs  request.rs
src/webserver/responses/: mod.rs  redirect.rs  response.rs  status_code.rs
src/webserver/responses/response/: cgi_handler.rs  content_negotiator.rs  templates.rs
src/webserver/shared/: headers.rs  method.rs  mod.rs
src/webserver/shared/headers/: connection.rs  range.rs  rated_entry.rs
src/webserver/socket_handler/: auth_handler.rs  etag.rs
src/webserver/socket_handler/auth_handler/: auth_file.rs  supplied_auth.rs
src/webserver/socket_handler/auth_handler/auth_file/: user.rs
templates/: directory.html  error.html
